[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/StartMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Level/Level2.tscn" type="PackedScene" id=6]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level1" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Player" parent="Level1" instance=ExtResource( 4 )]
visible = false
position = Vector2( 90, 546 )

[node name="Level2" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Player" parent="Level2" instance=ExtResource( 4 )]
visible = false
position = Vector2( 106.801, 447.801 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]
visible = false

[node name="StartMenu" parent="InterfaceLayer" instance=ExtResource( 5 )]
visible = false
